<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AnDICT</string>

    <!-- DictSettingsActivity -->
    <string name="dict_settings">AnDICT Settings</string>

    <string name="pref_server_key">pref_server_key</string>
    <string name="pref_server_title">DICT server address</string>
    <string name="pref_server_message">Enter a hostname or IP address of the DICT server to use for lookups (eg. dict.org)\n</string>
    <string name="pref_server_default">dict.org</string>

    <string name="pref_port_key">pref_port_key</string>
    <string name="pref_port_title">DICT server port</string>
    <string name="pref_port_message">Enter the port of the DICT server (usually 2628)\n</string>

    <string name="pref_database_key">pref_database_key</string>
    <string name="pref_database_title">Search strategy</string>
    <string name="pref_database_default">All matches</string>
    <string-array name="pref_database_entries">
        <item>All matches</item>
        <item>First match</item>
    </string-array>
    <string name="all_matches">All matches</string>
    <string name="first_match">First match</string>
<!-- unused
    <string-array name="pref_database_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_database_internal">
        <item>*</item>
        <item>!</item>
    </string-array>
-->

	<!-- PortPreferences -->
    <string name="button_add">+</string>
    <string name="button_sub">-</string>
    <string name="invalid_title">Invalid port number</string>
    <string name="invalid_message">Valid port number range:</string>
    <string name="invalid_button">@android:string/ok</string>

    
	<!-- DictActivity -->
	<string name="dict_activity">AnDICT</string>
	
    <string name="edit_hint">Enter a word to look up:</string>
    <string name="button_lookup">Lookup</string>
    <string name="progress">Looking up word&#8230;</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

</resources>